# priorauth

./: State.py  graphbuilder.py  main.py  pyproject.toml  requirement.txt  test_ocr.py
agents/: json_extractor_agent.py  ocr_agent.py
db/: chunks.pkl
db/Chroma_db/: chroma.sqlite3
embeddings/: __init__.py  embeddings_protocol.py  gemini_embedding.py  huggingface_embedding.py
llm/: __init__.py  gemini.py  llmprotocol.py  mistral.py
models/: form_model.py  imaging_model.py  labs_mode.py  notes_model.py
nodes/: aggregator_node.py  evaluation_node.py  form_node.py  imaging_node.py  index_node.py  labs_node.py  notes_node.py  orchestrator_node.py  policy_node.py
ocr/: __init__.py  ocr_space.py  ocrprotocol.py
output/: final_output_20260406_000306.json  final_output_20260407_170348.json  final_output_20260408_193131.json  final_output_20260427_193845.json  final_output_20260427_195450.json  final_prior_auth.json  form.json  imaging.json  labs.json  notes.json
schema/: __init__.py  masterschema.py
vectordb/: chormadb.py
